// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decrement a variable (with postfix operator: x--) 1`] = `
['source.ts', [
    ['', 'let x = '],
    ['constant.numeric.decimal', '0'],
    ['', ';\\nx'],
    ['keyword.operator.decrement', '--'],
    ['', ';\\n']
]

`;

exports[`decrement a variable (with prefix operator: --x) 1`] = `
['source.ts', [
    ['', 'let x = '],
    ['constant.numeric.decimal', '0'],
    ['', ';\\n'],
    ['keyword.operator.decrement', '--'],
    ['', 'x;\\n']
]

`;

exports[`increment a variable (with postfix operator: x++) 1`] = `
['source.ts', [
    ['', 'let x = '],
    ['constant.numeric.decimal', '0'],
    ['', ';\\nx'],
    ['keyword.operator.increment', '++'],
    ['', ';\\n']
]

`;

exports[`increment a variable (with prefix operator: ++x) 1`] = `
['source.ts', [
    ['', 'let x = '],
    ['constant.numeric.decimal', '0'],
    ['', ';\\n'],
    ['keyword.operator.increment', '++'],
    ['', 'x;\\n']
]

`;
